Stuff builds when I include embedded base stuff

--- a/Appli/CMakeLists.txt
+++ b/Appli/CMakeLists.txt
@@ -60,11 +60,19 @@ enable_language(C ASM)
 # Add include paths
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user defined include paths
+    "../Drivers/Embedded-Base/general/include/"
+    "../Drivers/Embedded-Base/middleware/include/"
+)
+
+# Contains every c/cpp file in Embedded-Base. Dunno if this is bad practice
+file(GLOB_RECURSE EMBEDDED_BASE_SOURCES 
+    "../Drivers/Embedded-Base/general/src/lan8670.c"
 )
 
 # Add sources to executable
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user sources here
+    ${EMBEDDED_BASE_SOURCES}
 )
 
 # Link directories setup
@@ -81,11 +89,6 @@ target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE
 if((CMAKE_C_STANDARD EQUAL 90) OR (CMAKE_C_STANDARD EQUAL 99))
     message(ERROR "Generated code requires C11 or higher")
 endif()
-
-
-
-
-
 
 
 
