--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,11 @@
         "stm32h7rsxx_hal.h": "c",
         "ethernet.h": "c",
         "nx_api.h": "c",
-        "stdint.h": "c"
+        "stdint.h": "c",
+        "app_threadx.h": "c",
+        "threads.h": "c",
+        "u_ethernet.h": "c",
+        "u_threads.h": "c",
+        "tx_api.h": "c"
     }
 }
