Added some extra comments to u_threads.h and u_ethernet.h

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "threads.h": "c",
         "u_ethernet.h": "c",
         "u_threads.h": "c",
-        "tx_api.h": "c"
+        "tx_api.h": "c",
+        "stdbool.h": "c"
     }
 }
