--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,7 @@ target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE
 
 # Compiler options
 target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE
-    -Wno-unused-parameter
+    -Wno-unused-parameter # u_TODO - this doesn't seem to be working
 )
 
 # Add linked libraries
