Added basic FDCAN stuff into Cerberus-2.0. No threads/queues yet tho.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,11 +55,13 @@ target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user sources here
     "../Drivers/Embedded-Base/general/src/lan8670.c"
+    "../Drivers/Embedded-Base/platforms/stm32h563/src/fdcan.c"
     "./Core/Src/u_ethernet.c"
     "./Core/Src/u_inbox.c"
     "./Core/Src/u_threads.c"
     "./Core/Src/u_statemachine.c"
     "./Core/Src/u_queues.c"
+    "./Core/Src/u_can.c"
 )
 
 # Add include paths
@@ -67,6 +69,7 @@ target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user defined include paths
     "./Drivers/Embedded-Base/general/include/"
     "./Drivers/Embedded-Base/middleware/include/"
+    "./Drivers/Embedded-Base/platforms/stm32h563/include/"
     "./NetXDuo"
     "./Core/Inc/"
 )
