--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     "./Core/Src/u_rtds.c"
     "./Core/Src/u_pedals.c"
     "./Core/Src/u_bms.c"
+    "./Core/Src/u_dti.c"
 )
 
 # Add include paths
