Added adc stuff and changed whole lotta other thing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     "./Core/Src/u_pedals.c"
     "./Core/Src/u_bms.c"
     "./Core/Src/u_dti.c"
+    "./Core/Src/u_adc.c"
 )
 
 # Add include paths
