Added TSMS reading stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     "./Core/Src/u_dti.c"
     "./Core/Src/u_adc.c"
     "./Core/Src/u_peripherals.c"
+    "./Core/Src/u_tsms.c"
 )
 
 # Add include paths
