--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     "./Core/Src/u_peripherals.c"
     "./Core/Src/u_tsms.c"
     "./Core/Src/u_lightning.c"
+    "./Core/Src/u_debug.c"
 )
 
 # Disable Logging in certain files
