--- a/Tests/ner_test.conf
+++ b/Tests/ner_test.conf
@@ -1,6 +1,6 @@
 # TSECU/Shepherd Testing Config
 
-title = "TSECU/Shepherd Testing"
+title = "Cerberus-2.0 Testing"
 
 mocked-files = [
     "Drivers/Embedded-Base/Testing/manual_mocks/stubs.h", 
