--- a/Tests/ner_test.conf
+++ b/Tests/ner_test.conf
@@ -29,7 +29,7 @@ mocked-files = []
 
 [tests.pedals]
 test-package = "pedals"
-test-file = "Tests/Src/test_pedals.cd"
+test-file = "Tests/Src/test_pedals.c"
 
 
 
