--- a/Tests/ner_test.conf
+++ b/Tests/ner_test.conf
@@ -2,9 +2,7 @@
 
 title = "Cerberus-2.0 Testing"
 
-mocked-files = [
-    "Drivers/Embedded-Base/Testing/manual_mocks/stubs.h", 
-]
+mocked-files = []
 
 sources = []   
 
