--- a/Tests/ner_test.conf
+++ b/Tests/ner_test.conf
@@ -4,7 +4,7 @@ title = "Cerberus-2.0 Testing"
 
 mocked-files = []
 
-sources = []   
+sources = ["Drivers/Embedded-Base/middleware/src/c_utils.c"]   
 
 include-dirs = [
     "Tests/Stubs",
