--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Drivers/Embedded-Base"]
 	path = Drivers/Embedded-Base
 	url = git@github.com:Northeastern-Electric-Racing/Embedded-Base.git
+[submodule "Drivers/Odyssey-Definitions"]
+	path = Drivers/Odyssey-Definitions
+	url = git@github.com:Northeastern-Electric-Racing/Odyssey-Definitions.git
